--- a/deletepost/package.json
+++ b/deletepost/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "post-service",
+  "name": "deletepost",
   "version": "1.0.0",
-  "description": "*Using SNS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.738.0",
     "@aws-sdk/client-dynamodb": "^3.738.0",
@@ -25,7 +25,6 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^11.0.5",
     "winston": "^3.17.0",
     "socket.io": "^4.5.4" 
   }
