--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,38 @@ on:
       - develop
 
 jobs:
-  deploy:
+  setup:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set AWS Region
-        run: echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to AWS ECR
-        env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+  build-and-push:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Build and Push Docker Image to Docker Hub
         run: |
-          aws configure set region $AWS_REGION
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_REPOSITORY }}
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/post-service-newpost:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/post-service-newpost:latest
 
-      - name: Build and Push Docker Image
-        run: |
-          docker-compose build
-          docker tag post-service-newpost:latest ${{ secrets.AWS_ECR_REPOSITORY }}:latest
-          docker push ${{ secrets.AWS_ECR_REPOSITORY }}:latest
-
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.4
         with:
@@ -36,7 +45,13 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            export AWS_REGION=${{ secrets.AWS_REGION }}
-            docker pull ${{ secrets.AWS_ECR_REPOSITORY }}:latest
+            sudo yum update -y
+            sudo yum install -y docker
+            sudo service docker start
+            sudo usermod -aG docker ec2-user
+            newgrp docker
+            curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/post-service-newpost:latest
             docker-compose down
             docker-compose up -d
