--- a/createPost/package.json
+++ b/createPost/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "deletepost",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.738.0",
     "@aws-sdk/client-dynamodb": "^3.738.0",
@@ -30,5 +20,15 @@
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5",
     "winston": "^3.17.0"
-  }
+  },
+  "name": "createpost",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
