--- a/getpost/package.json
+++ b/getpost/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-dynamodb": "^3.738.0",
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/client-sqs": "^3.738.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -25,7 +26,9 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.17.0",
-    "socket.io": "^4.5.4" 
+    "redis": "^4.7.0",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.5",
+    "winston": "^3.17.0"
   }
 }
