--- a/package.json
+++ b/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "post-service",
-  "version": "1.0.0",
-  "description": "*Using SNS",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.738.0",
     "@aws-sdk/client-dynamodb": "^3.738.0",
@@ -25,8 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^11.0.5",
-    "winston": "^3.17.0",
-    "socket.io": "^4.5.4" 
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   }
 }
