--- a/createPost/Dockerfile
+++ b/createPost/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:18
+FROM node:20-alpine 
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-EXPOSE 3000
-CMD ["node", "index.js"]
+
+COPY package.json package-lock.json ./  
+RUN npm install --only=production  
+
+COPY . /app  
+EXPOSE 3000 
+CMD ["node", "index.js"]  
