--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,22 +26,22 @@ jobs:
 
       - name: Build and Push CreatePost Image
         run: |
-          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:createpost-latest ./createPost
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:createpost-latest ./createpost
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/app:createpost-latest
 
       - name: Build and Push GetPost Image
         run: |
-          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:getpost-latest ./getPost
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:getpost-latest ./getpost
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/app:getpost-latest
 
       - name: Build and Push UpdatePost Image
         run: |
-          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:updatepost-latest ./updatePost
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:updatepost-latest ./updatepost
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/app:updatepost-latest
 
       - name: Build and Push DeletePost Image
         run: |
-          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:deletepost-latest ./deletePost
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/app:deletepost-latest ./deletepost
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/app:deletepost-latest
 
   deploy_ec2:
